Added some prototype exercises

--- a/en/TypeExercises.ipynb
+++ b/en/TypeExercises.ipynb
@@ -32,47 +32,8 @@
     "\n",
     "### Coffee machine\n",
     "Our vending machine client wants to add a coffee machine just beside the food vending machine, and wants us to prepare the software to manage it. As a first round conversation, we have been informed that the coffee machine will serve coffee and black tea. Sugar and cream can be added to both of them. It will also have chocolate and capucchino, with the only option to add sugar. Finally, it will also serve a healthy green or white tea that can be topped with milk only. Start modeling the coffee machine by introducing the types to describe all these beverages.\n",
+    "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "fsharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "type Dimes = \n",
-    "    | Dimes of uint8\n",
-    "\n",
-    "type Quarters = \n",
-    "    | Quarters of uint8 \n",
-    "\n",
-    "type Halfs =\n",
-    "    | Halfs of uint8 \n",
-    "\n",
-    "type Coins =\n",
-    "    { \n",
-    "        Dimes: Dimes \n",
-    "        Quarters: Quarters\n",
-    "        Halfs: Halfs \n",
-    "    }\n",
-    "\n",
-    "let amount coins = \n",
-    "    let (Dimes dimes) = coins.Dimes \n",
-    "    let (Quarters quarts) = coins.Quarters \n",
-    "    let (Halfs halfs) = coins.Halfs\n",
-    "\n",
-    "    (float dimes) * 0.1 + float (quarts) * 0.25 + float (halfs) * 0.5\n"
    ]
   }
  ],
@@ -150,6 +111,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      },
      {
