--- a/Solutions/TypeExercises.ipynb
+++ b/Solutions/TypeExercises.ipynb
@@ -258,6 +258,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -292,6 +293,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      }
     ]
