Removed juypter translate

--- a/en/TypeExercises.ipynb
+++ b/en/TypeExercises.ipynb
@@ -43,34 +43,29 @@
    "language": "C#",
    "name": ".net-csharp"
   },
+  "language_info": {
+   "name": "polyglot-notebook"
+  },
   "polyglot_notebook": {
    "kernelInfo": {
     "defaultKernelName": "csharp",
     "items": [
      {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
       "aliases": [
-       "c#",
-       "C#"
+       "C#",
+       "c#"
       ],
       "languageName": "C#",
       "name": "csharp"
      },
      {
       "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "languageName": null,
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
+       "F#",
+       "f#"
       ],
       "languageName": "F#",
       "name": "fsharp"
@@ -111,8 +106,13 @@
      },
      {
       "aliases": [],
-      "languageName": null,
       "name": "value"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
      },
      {
       "aliases": [],
