--- a/Solutions/TypeExercises.ipynb
+++ b/Solutions/TypeExercises.ipynb
@@ -45,9 +45,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "fsharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -85,9 +82,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "fsharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
@@ -221,24 +215,37 @@
    "language": "C#",
    "name": ".net-csharp"
   },
+  "language_info": {
+   "name": "polyglot-notebook"
+  },
   "polyglot_notebook": {
    "kernelInfo": {
     "defaultKernelName": "csharp",
     "items": [
      {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
       "aliases": [
-       "c#",
-       "C#"
+       "C#",
+       "c#"
       ],
       "languageName": "C#",
       "name": "csharp"
      },
      {
       "aliases": [
-       "frontend"
+       "F#",
+       "f#"
       ],
-      "languageName": null,
-      "name": "vscode"
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
      },
      {
       "aliases": [
@@ -249,30 +256,8 @@
      },
      {
       "aliases": [],
-      "name": "webview"
-     },
-     {
-      "aliases": [],
       "languageName": "KQL",
       "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": null,
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
      },
      {
       "aliases": [],
@@ -293,8 +278,17 @@
      },
      {
       "aliases": [],
-      "languageName": null,
       "name": "value"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
